syntax = "proto3";

package com.alioth4j.corneast_core.proto;

option java_package = "com.alioth4j.corneast_core.proto";
option java_outer_classname = "ResponseProto";

message ResponseDTO {
    string type = 1;
    string id = 2;

    oneof response {
        RegisterRespDTO registerRespDTO = 3;
        ReduceRespDTO reduceRespDTO = 4;
        QueryRespDTO queryRespDTO = 5;
        ReleaseRespDTO releaseRespDTO = 6;
    }
}

message RegisterRespDTO {
    string key = 1;
    bool success = 2;
}

message ReduceRespDTO {
    string key = 1;
    bool success = 2;
}

message QueryRespDTO {
    string key = 1;
    int64 remainingTokenCount = 2;
}

message ReleaseRespDTO {
    string key = 1;
    bool success = 2;
}
